--- a/app/src/main/res/layout/dialog_data.xml
+++ b/app/src/main/res/layout/dialog_data.xml
@@ -5,14 +5,15 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:padding="25dp"
-        android:layout_height="wrap_content"/>
+        android:background="#fff"
+        android:layout_height="match_parent">
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
