--- a/app/src/main/res/layout/activity_reporte_pedido_por_llamada.xml
+++ b/app/src/main/res/layout/activity_reporte_pedido_por_llamada.xml
@@ -258,7 +258,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="14dp"
+                                    android:layout_marginTop="8dp"
                                     android:fontFamily="@font/futura"
                                     android:text="En espera : "
                                     android:textAlignment="center"
@@ -267,7 +267,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginTop="14dp"
+                                    android:layout_marginTop="8dp"
                                     android:fontFamily="@font/futura"
                                     android:text="En proceso : "
                                     android:textAlignment="center"
@@ -525,35 +525,102 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@android:color/darker_gray"
-                    android:layout_height="1dp"/>
+                <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="5dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#F9F9F9"
+                android:orientation="vertical">
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:background="@android:color/darker_gray"
-                    android:layout_height="1dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#F9F9F9"
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Leyenda : "
+                    android:textColor="#000"
+                    android:gravity="center"
+                    android:layout_marginLeft="12dp"
+                    android:fontFamily="@font/futura"
+                    android:layout_height="match_parent"/>
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:text="Grafico"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:id="@+id/btn_graph"
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/ic_leyenda_purple"
                     android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Delivery Aukde"
+                    android:textColor="#000"
+                    android:gravity="center"
+                    android:fontFamily="@font/futura"
+                    android:layout_height="match_parent"/>
+
+            </LinearLayout>
+
+                <com.github.mikephil.charting.charts.LineChart
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/dateChart"
+                    android:layout_height="200dp"/>
+
+            </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:text="Generar PDF"
+                        android:layout_weight="1"
+                        android:textColor="#fff"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:background="@drawable/redondo"
+                        android:backgroundTint="@drawable/btn_background_negro"
+                        android:layout_gravity="center"
+                        android:id="@+id/btn_filter_pdf"
+                        android:layout_height="wrap_content"/>
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:text="Ampliar Gráfico"
+                        android:layout_weight="1"
+                        android:padding="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:textColor="#fff"
+                        android:background="@drawable/redondo"
+                        android:backgroundTint="@drawable/btn_background_negro"
+                        android:layout_gravity="center"
+                        android:id="@+id/btn_graph"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
                     android:layout_marginTop="10dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="0dp">
 
                     <TextView
                         android:layout_marginLeft="10dp"
@@ -587,7 +654,6 @@
                     android:layout_marginRight="10dp"
                     android:background="@android:color/darker_gray"
                     android:layout_height="1dp"/>
-
 
                  <TextView
                     android:layout_width="0dp"
