--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -93,7 +93,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MyAlertDialogData" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">#FC0000</item>
+        <item name="colorAccent">#5bbd00</item>
     </style>
 
     <style name="ThemeOverlay" parent="ThemeOverlay.AppCompat.Dialog.Alert">
