--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -366,6 +366,44 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#F1E8FC"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnSolicitudProductoAdmin"
+                        android:gravity="center"
+                        android:background="@drawable/btn_solicitud_producto"
+                        android:layout_height="80dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Solicitar\nProducto"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:background="#E8FCFC"
                     android:padding="16dp">
 
@@ -404,20 +442,59 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:background="#F1E8FC"
+                    android:background="#FFF9D9"
                     android:padding="16dp">
 
                     <Button
                         android:layout_width="80dp"
-                        android:id="@+id/btnSolicitudProductoAdmin"
                         android:gravity="center"
-                        android:background="@drawable/btn_solicitud_producto"
+                        android:id="@+id/btnListaSolicitudProducto"
+                        android:background="@drawable/btn_lista_solicitud_producto"
+                        android:layout_height="80dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textAlignment="center"
+                        android:layout_marginBottom="12dp"
+                        android:text="Productos\nSolicitados"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#E5F1F1"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:id="@+id/btnConfiguraciones"
+                        android:background="@drawable/btn_configuraciones"
                         android:layout_height="80dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_marginBottom="12dp"
-                        android:text="Solicitar\nProducto"
+                        android:text="Configuración"
                         android:textSize="16sp"
                         android:fontFamily="@font/futura"
                         android:textColor="#000000"
