--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -7,19 +7,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:animateLayoutChanges="true"
-    android:background="@drawable/colorosagradient"
+    android:background="#fff"
     tools:context=".paquetes.Menus.MenuProveedor">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_marginTop="6dp"
         android:layout_height="match_parent">
 
         <TextView
             android:layout_width="0dp"
             android:id="@+id/urlPhotoProv"
             android:layout_height="0dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:background="@drawable/proveedorback"
+            android:layout_height="100dp">
 
         <RelativeLayout
             android:layout_marginRight="20dp"
@@ -113,9 +118,12 @@
                 android:layout_alignParentRight="true"
                 android:layout_width="62dp"
                 />
-
-
         </RelativeLayout>
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <GridLayout
             android:columnCount="2"
@@ -141,7 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:background="#F9F9F9"
+                    android:background="#E4FFEF"
                     android:padding="16dp">
 
                     <Button
@@ -177,7 +185,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:background="#F9F9F9"
+                    android:background="#F0F0F0"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:padding="16dp">
@@ -223,7 +231,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:background="#F9F9F9"
+                    android:background="#E8FFDD"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:padding="16dp">
@@ -270,7 +278,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:background="#F9F9F9"
+                    android:background="#E3FBFF"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:padding="16dp">
@@ -303,10 +311,84 @@
 
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#FFF4EE"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:id="@+id/botnListaDePedidos"
+                        android:background="@drawable/btn_lista_pedidos"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Lista\nde Solicitudes"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/futura"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#E5F1F1"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:id="@+id/btnConfiguraciones"
+                        android:background="@drawable/btn_configuraciones"
+                        android:layout_height="80dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Configuración"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
         </GridLayout>
-
-
-
+        </ScrollView>
     </LinearLayout>
 
 </LinearLayout>
