--- a/app/src/main/res/layout/activity_solicitar_producto.xml
+++ b/app/src/main/res/layout/activity_solicitar_producto.xml
@@ -30,6 +30,11 @@
         android:layout_marginBottom="5dp"
         android:layout_height="wrap_content"/>
 
+            <TextView
+                android:layout_width="0dp"
+                android:id="@+id/numSolicitudProducto"
+                android:layout_height="0dp"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
