--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -371,13 +371,13 @@
                         android:layout_width="80dp"
                         android:gravity="center"
                         android:id="@+id/btnConfiguraciones"
-                        android:background="@drawable/btn_configuraciones"
+                        android:background="@drawable/btn_finanzas"
                         android:layout_height="80dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_marginBottom="12dp"
-                        android:text="Configuración"
+                        android:text="Reportes"
                         android:textSize="16sp"
                         android:fontFamily="@font/futura"
                         android:textColor="#000000"
