--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
 
     <!-- creamos un nuevo estilo con el siguiente código , hacemos el llamado del xml (splashcreen) -->
     <style name="splashScreenTheme" parent="@style/AppThemeSplash">
-        <item name="android:windowBackground">@drawable/splashscreen</item>
+        <item name="android:windowBackground">@drawable/adici2</item>
     </style>
 
     <style name="AppThemeSplash" parent="Theme.AppCompat.Light.DarkActionBar">
