--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -116,8 +116,7 @@
                 android:background="@drawable/ic_admin"
                 android:foreground="@drawable/selecion"
                 android:layout_alignParentRight="true"
-                android:layout_width="62dp"
-                />
+                android:layout_width="62dp"/>
         </RelativeLayout>
         </LinearLayout>
 
@@ -135,14 +134,16 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="90dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
+                android:id="@+id/btnPerfil"
                 app:cardElevation="6dp"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                >
+                android:layout_margin="12dp">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -154,8 +155,8 @@
 
                     <Button
                         android:layout_width="80dp"
-                        android:id="@+id/btnPerfil"
                         android:gravity="center"
+                        android:clickable="false"
                         android:background="@drawable/btn_provider"
                         android:layout_height="80dp"/>
 
@@ -173,14 +174,16 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 app:cardElevation="6dp"
+                android:id="@+id/btnListaProductos"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                >
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
+                android:layout_margin="12dp">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -196,10 +199,10 @@
                         android:layout_height="80dp">
 
                         <Button
-                            android:layout_width="50dp"
+                            android:layout_width="60dp"
                             android:gravity="center"
-                            android:id="@+id/btnListaProductos"
-                            android:background="@drawable/btn_productos"
+                            android:clickable="false"
+                            android:background="@drawable/miproducto1"
                             android:layout_height="80dp"/>
 
                     </RelativeLayout>
@@ -219,14 +222,16 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
                 app:cardElevation="6dp"
+                android:id="@+id/btnAgregarProducto"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                >
+                android:layout_margin="12dp">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -242,10 +247,10 @@
                         android:layout_height="80dp">
 
                         <Button
-                            android:layout_width="150dp"
+                            android:layout_width="170dp"
                             android:gravity="center"
-                            android:id="@+id/btnAgregarProducto"
-                            android:background="@drawable/btn_agregar_producto"
+                            android:clickable="false"
+                            android:background="@drawable/agregarprod1"
                             android:layout_height="80dp"/>
 
                     </RelativeLayout>
@@ -266,14 +271,16 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 app:cardElevation="6dp"
+                android:id="@+id/btnSolicitarDelivery"
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                >
+                android:layout_margin="12dp">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -291,7 +298,7 @@
                         <Button
                             android:layout_width="80dp"
                             android:gravity="center"
-                            android:id="@+id/btnSolicitarDelivery"
+                            android:clickable="false"
                             android:background="@drawable/btn_monitoreo"
                             android:layout_height="80dp"/>
 
@@ -312,11 +319,14 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 app:cardElevation="6dp"
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
+                android:id="@+id/btnListaDeSolicitudes"
                 app:cardCornerRadius="12dp"
                 android:layout_margin="12dp">
 
@@ -331,7 +341,7 @@
                     <Button
                         android:layout_width="80dp"
                         android:gravity="center"
-                        android:id="@+id/btnListaDeSolicitudes"
+                        android:clickable="false"
                         android:background="@drawable/btn_lista_pedidos"
                         android:layout_height="80dp"/>
 
@@ -350,14 +360,16 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 app:cardElevation="6dp"
+                android:foreground="@drawable/itemback"
+                android:clickable="true"
+                android:id="@+id/btnConfiguraciones"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp"
-                >
+                android:layout_margin="12dp">
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -370,7 +382,7 @@
                     <Button
                         android:layout_width="80dp"
                         android:gravity="center"
-                        android:id="@+id/btnConfiguraciones"
+                        android:clickable="false"
                         android:background="@drawable/btn_finanzas"
                         android:layout_height="80dp" />
 
@@ -384,11 +396,8 @@
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
-
         </GridLayout>
         </ScrollView>
     </LinearLayout>
-
 </LinearLayout>
